Added benchmark doc
Signed-off-by: vara-bonthu <vara.bonthu@gmail.com>